可以转换成json文件了

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
     <head>
         <title></title>
         <meta charset="utf-8" />
-        <link href="style/application.css" rel="stylesheet"/>
+        <link href="meta/application.css" rel="stylesheet"/>
     </head>
     <body>
         <div class="dropbox">
             请将文件拖拽到这里
         </div>
+        <iframe id="frmFile" src="meta/ask.txt"></iframe>
+        <script src="js/json_creator.js">
+        </script>
+        <script src="js/FileSaver.min.js">
+        </script>
         <script src="js/application.js">
         </script>
         <script src="js/data_collector.js">
