修改了使用提示

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="dropbox">
-            请将文件拖拽到这里
+            请将Myclipings.txt拖放到这里
         </div>
         <iframe id="frmFile" src="meta/ask.txt"></iframe>
         <script src="js/json_creator.js">
