--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
     <head>
-        <title></title>
         <meta charset="utf-8" />
+        <title>新人任务二</title>
         <link href="meta/application.css" rel="stylesheet"/>
     </head>
     <body>
